Fix annotation tooltip clipped by table overflow: auto

--- a/docusaurus/src/scss/table.scss
+++ b/docusaurus/src/scss/table.scss
@@ -4,6 +4,11 @@ table {
   overflow: auto;
   border-radius: 4px;
 
+  /* Allow annotation tooltips to overflow the table when open */
+  &:has(.annotation__tooltip) {
+    overflow: visible;
+  }
+
   thead {
     --ifm-table-background: transparent;
     --ifm-table-stripe-background: transparent;
